# fast_project

./: .coverage  .env  .gitignore  README.md  compose.yaml  database.db  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: 07910862a2d0_create_users_table.py  272e30f1b315_create_todos_table.py  552d64b66cf6_implemantaçao_do_created_at_e_updated_at.py  8961b12e1386_add_default_to_todos_timestamps.py  f4406273d7e9_gerando_migraçao_automatica.py
src/fast_project/: app.py  database.py  models.py  security.py  settings.py  squemas.py
src/fast_project/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
